# audio-loop

./: CLAUDE.md  SOUND_DESIGN.md  SUPERCOLLIDER.md  pyproject.toml
.learnings/: VISION.md  sound-design-journal.md
.planning/: LEARNINGS.md  MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-ROADMAP.md  v1.1-ROADMAP.md  v2.0-ROADMAP.md
.planning/phases/01-infrastructure/: RESEARCH.md
.planning/phases/01-render-pipeline/: 01-PLAN.md  01-SUMMARY.md  RESEARCH.md
.planning/phases/02-analysis-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  RESEARCH.md
.planning/phases/03-iteration-tools/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  RESEARCH.md
.planning/phases/04-zwicker-integration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-performance-optimization/: 05-01-PLAN.md  05-01-SUMMARY.md  05-RESEARCH.md
.planning/phases/06-spectrogram-visualization/: 06-01-PLAN.md  06-01-SUMMARY.md
.planning/phases/07-real-world-validation/: 07-CONTEXT.md  07-FINDINGS.md
.planning/phases/08-mcp-server/: 08-01-PLAN.md  (+5 more)
scripts/: benchmark_analyze.py  profile_analyze.py
sounds/: airplane_enya_baby.scd  hecker_mess.scd  hecker_v2.scd  hecker_v3.scd  rainforest.scd  rainforest_entity.scd  rainforest_extremes.scd  rainforest_midi.scd  rainforest_play.scd  rainforest_test.scd  test_synth.scd  titans.scd  titans_v2.scd  titans_v3.scd  vintage_lead.scd  wobble_sparkle.scd  xtal-attempt3.scd  xtol-style.scd
sounds/barbieri/: ref_consciousness.flac
sounds/barbieri-iter/: bright_dpo_v1.scd  composed_melody_v1.scd  composition_v1.scd  counterpoint_v1.scd  emergence_v2.scd  full_rig_v2.scd  full_synth_v1.scd  harmonic_osc.scd  hypnotic_v1.scd  modular_v1.scd  sequenced_test.scd
src/audioloop/: __init__.py  analyze.py  cli.py  compare.py  errors.py  interpret.py  layout.py  mcp_models.py  mcp_server.py  play.py  psychoacoustic.py  render.py  sc_paths.py  sclang.py  spectrogram.py  wrapper.py
src/audioloop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_analyze.py  test_analyze_cli.py  test_compare.py  test_iterate.py  test_play.py  test_render.py  test_wrapper.py
tests/fixtures/: full_nrt.scd  runtime_error.scd  simple_function.scd  syntax_error.scd
(+4 files in other folders)
