[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audioloop"
version = "0.1.0"
description = "CLI tool for rendering SuperCollider code to WAV files"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Morgan"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "librosa>=0.10.0,<0.12",
    "soundfile>=0.12.0",
    "pyloudnorm>=0.1.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
psychoacoustic = [
    "mosqito>=1.2.0",
]
mcp = [
    "mcp[cli]>=1.25.0",
    "pydantic>=2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-anyio",
]

[project.scripts]
audioloop = "audioloop.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
